--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autotyping",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "blinking",
     "terminal-like"
   ],
-  "author": "Igor Stojcic <igor@smarty.rs>",
+  "author": "Igor Stojcic <igor@smarty.rs> (https://igor.smarty.rs)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/igor-stojcic/AutoTyping.js/issues"
