--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "autotyping",
-  "version": "1.1.3",
+  "name": "@igor-stojcic/AutoTyping.js",
+  "version": "1.1.4",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
   "scripts": {
     "build": "webpack --mode production"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "repository": {
     "type": "git",
