--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@igor-stojcic/autotyping",
-  "version": "1.1.6",
+  "name": "@elf.coder/autotyping",
+  "version": "1.1.7",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
   "scripts": {
