--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@igor-stojcic/autotyping",
-  "version": "1.1.9",
+  "name": "autotyping",
+  "version": "1.1.3",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
   "scripts": {
@@ -9,10 +9,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/igor-stojcic/AutoTyping.js.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/",
-    "access": "public"
   },
   "keywords": [
     "autotyping",
@@ -35,8 +31,5 @@
     "babel-loader": "^8.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
-  },
-  "directories": {
-    "example": "example"
   }
 }
