--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autotyping",
+  "name": "autotyping.js",
   "version": "1.2.0",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
