--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "autotyping.js",
-  "version": "1.2.0",
+  "name": "@igor-stojcic/autotyping",
+  "version": "1.2.1",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
   "scripts": {
@@ -8,7 +8,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/igor-stojcic/AutoTyping.js.git"
+    "url": "git+https://github.com/igor-stojcic/autotyping.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "keywords": [
     "autotyping",
@@ -23,7 +26,7 @@
   "author": "Igor Stojcic <igor@smarty.rs> (https://igor.smarty.rs)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/igor-stojcic/AutoTyping.js/issues"
+    "url": "https://github.com/igor-stojcic/autotyping/issues"
   },
-  "homepage": "https://github.com/igor-stojcic/AutoTyping.js#readme"
+  "homepage": "https://github.com/igor-stojcic/autotyping#readme"
 }
