--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@igor-stojcic/autotyping",
-  "version": "1.2.3",
+  "name": "autotyping",
+  "version": "1.1.3",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
   "scripts": {
@@ -8,10 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/igor-stojcic/autotyping.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "url": "git+https://github.com/igor-stojcic/AutoTyping.js.git"
   },
   "keywords": [
     "autotyping",
@@ -26,7 +23,13 @@
   "author": "Igor Stojcic <igor@smarty.rs> (https://igor.smarty.rs)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/igor-stojcic/autotyping/issues"
+    "url": "https://github.com/igor-stojcic/AutoTyping.js/issues"
   },
-  "homepage": "https://github.com/igor-stojcic/autotyping#readme"
+  "homepage": "https://github.com/igor-stojcic/AutoTyping.js#readme",
+  "devDependencies": {
+    "@babel/core": "^7.11.1",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  }
 }
