--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "autotyping",
-  "version": "1.2.3",
+  "name": "@igor-stojcic/autotyping",
+  "version": "1.2.4",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
   "scripts": {
@@ -9,6 +9,9 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/igor-stojcic/AutoTyping.js.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "keywords": [
     "autotyping",
