--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@igor-stojcic/autotyping",
+  "name": "autotyping",
   "version": "1.2.4",
   "description": "This is a JavaScript library that allows you to easily and quickly implement a type writer effect on your website or application.",
   "main": "dist/AutoTyping.min.js",
@@ -9,9 +9,6 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/igor-stojcic/AutoTyping.js.git"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
   },
   "keywords": [
     "autotyping",
@@ -28,11 +25,5 @@
   "bugs": {
     "url": "https://github.com/igor-stojcic/AutoTyping.js/issues"
   },
-  "homepage": "https://github.com/igor-stojcic/AutoTyping.js#readme",
-  "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "babel-loader": "^8.1.0",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
-  }
+  "homepage": "https://github.com/igor-stojcic/AutoTyping.js#readme"
 }
